--- a/MArchive.Web/Web.config
+++ b/MArchive.Web/Web.config
@@ -6,20 +6,18 @@
 <configuration>
   <configSections>
     <sectionGroup name="elmah">
-      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah"/>
-      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah"/>
-      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah"/>
-      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah"/>
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
   </configSections>
   <elmah>
-    <security allowRemoteAccess="1"/>
-    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="MArchiveConnectionString" applicationName="MArchive.Web"/>
+    <security allowRemoteAccess="1" />
+    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="MArchiveConnectionString" applicationName="MArchive.Web" />
   </elmah>
   <connectionStrings>
-    <add name="MArchiveConnectionString"
-         connectionString="Data Source=localhost;Initial Catalog=MovieArchive;Persist Security Info=True;User ID=sa;Password=123456; pooling=true; Min Pool Size=5; Max Pool Size=100;"
-         providerName="System.Data.SqlClient" />
+    <add name="MArchiveConnectionString" connectionString="Data Source=localhost;Initial Catalog=MovieArchive;Persist Security Info=True;User ID=sa;Password=123456; pooling=true; Min Pool Size=5; Max Pool Size=100;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -27,35 +25,28 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key ="relativeWebSiteImageController" value="moviePictures" />
-    <add key="encryptionEnabled" value="true"/>
-    <add key="passPhrase" value="passPhrase"/>
-    <add key="saltValue" value="saltIt"/>
-    <add key="initVector" value="3CabiK@!orealnKc"/>
+    <add key="relativeWebSiteImageController" value="moviePictures" />
+    <add key="encryptionEnabled" value="true" />
+    <add key="passPhrase" value="passPhrase" />
+    <add key="saltValue" value="saltIt" />
+    <add key="initVector" value="3CabiK@!orealnKc" />
   </appSettings>
   <location path="elmah.axd">
     <system.web>
       <authorization>
-        <deny users="?"/>
+        <deny users="?" />
       </authorization>
     </system.web>
   </location>
   <location path="~/Error">
     <system.web>
       <authorization>
-        <allow users="*"/>
+        <allow users="*" />
       </authorization>
     </system.web>
   </location>
   <system.web>
-    <globalization
-      enableClientBasedCulture="false"
-      uiCulture="auto"
-      culture="auto"
-      fileEncoding="utf-8"
-      requestEncoding="utf-8"
-      responseEncoding="utf-8"
-    />
+    <globalization enableClientBasedCulture="false" uiCulture="auto" culture="auto" fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" />
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
     <authentication mode="Forms">
@@ -73,16 +64,16 @@
       </namespaces>
     </pages>
     <httpHandlers>
-      <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah"/>
+      <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
     </httpHandlers>
     <httpModules>
-      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah"/>
-      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah"/>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
     </httpModules>
-    <customErrors mode="Off" >
+    <customErrors mode="Off">
     </customErrors>
     <authorization>
-      <allow users="?"/>
+      <allow users="?" />
     </authorization>
   </system.web>
   <system.webServer>
@@ -94,11 +85,11 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      <add name="Elmah" verb="POST,GET,HEAD" path="elmah.axd" preCondition="integratedMode" type="Elmah.ErrorLogPageFactory, Elmah"/>
+      <add name="Elmah" verb="POST,GET,HEAD" path="elmah.axd" preCondition="integratedMode" type="Elmah.ErrorLogPageFactory, Elmah" />
     </handlers>
     <modules runAllManagedModulesForAllRequests="true">
-      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler"/>
-      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler"/>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
     </modules>
   </system.webServer>
   <runtime>
@@ -114,6 +105,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
