--- a/MArchiveAngularWeb/MArchiveAngularWeb.csproj
+++ b/MArchiveAngularWeb/MArchiveAngularWeb.csproj
@@ -62,7 +62,9 @@
   <ItemGroup>
     <Content Include="css\bootstrap-cyborg.min.css" />
     <Content Include="css\loading-bar.min.css" />
+    <Content Include="css\site.css" />
     <Content Include="Default.aspx" />
+    <Content Include="js\angular-route.min.js" />
     <Content Include="js\angular.min.js" />
     <Content Include="js\loading-bar.min.js" />
     <Content Include="Web.config" />
