--- a/Authentication.API/Authentication.API.csproj
+++ b/Authentication.API/Authentication.API.csproj
@@ -145,9 +145,13 @@
     <Compile Include="AuthRepository.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
+    <Compile Include="Entities\AspNetClient.cs" />
+    <Compile Include="Entities\AspNetRefreshToken.cs" />
+    <Compile Include="Models\Enum.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
+    <Compile Include="Providers\SimpleRefreshTokenProvider.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
