--- a/MArchiveAngularWeb/MArchiveAngularWeb.csproj
+++ b/MArchiveAngularWeb/MArchiveAngularWeb.csproj
@@ -63,13 +63,14 @@
     <Content Include="app\app.js" />
     <Content Include="app\controllers\homeController.js" />
     <Content Include="app\controllers\indexController.js" />
+    <Content Include="app\controllers\myListsController.js" />
     <Content Include="app\services\authInterceptorService.js" />
     <Content Include="app\services\authService.js" />
-    <Content Include="app\services\myRatedMoviesService.js" />
+    <Content Include="app\services\myMovieListsService.js" />
     <Content Include="app\translations.js" />
     <Content Include="app\views\home.html" />
     <Content Include="app\views\login.html" />
-    <Content Include="app\views\myRatedMovies.html" />
+    <Content Include="app\views\myLists.html" />
     <Content Include="app\views\signup.html" />
     <Content Include="app\controllers\loginController.js" />
     <Content Include="app\controllers\signupController.js" />
@@ -77,6 +78,7 @@
     <Content Include="css\bootstrap-cyborg.min.css" />
     <Content Include="css\loading-bar.min.css" />
     <Content Include="css\site.css" />
+    <Content Include="css\social-buttons.css" />
     <Content Include="index.html" />
     <Content Include="js\angular-local-storage.min.js" />
     <Content Include="js\angular-route.min.js" />
